add_library(console Console.cpp)
target_include_directories(console PUBLIC ../../../include)
target_link_libraries(console glfw)
target_link_libraries(console gl3w)
target_link_libraries(console framework)

add_library(render Render.cpp)
target_include_directories(render PUBLIC ../../../include)
target_link_libraries(render glfw)
target_link_libraries(render gl3w)
target_link_libraries(render framework)

add_library(input Input.cpp)
target_include_directories(input PUBLIC ../../../include)
target_link_libraries(input glfw)
target_link_libraries(input gl3w)
target_link_libraries(input framework)
